# sphene

./: .dockerignore  .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  config.py  discord-bot-design-memory.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  system.txt.sample  指示.md
.claude/instructions/: memory-bank.md
.github/: copilot-instructions.md  pull_request_template.md
.github/instructions/: memory-bank.instructions.md
.github/workflows/: build.yml  claudecodeaction.yml  tests.yml
.serena/memories/: suggested_commands.md
ai/: api.py  client.py  conversation.py  router.py  tools.py
bot/: commands.py  discord_bot.py  events.py
docs/: autonomous-response.md  living-memory.md  vanguard.md
k8s/: deployment-ubuntu.yaml  deployment.yaml
log_utils/: __init__.py  logger.py
memory/: channel_context.py  fact_store.py  judge.py  llm_judge.py  reflection.py  short_term.py  summarizer.py  user_profile.py
memory-bank/: activeContext.md  progress.md  systemPatterns.md  techContext.md
prompts/: system.asahi.txt  system.giott.txt  system.sphene.txt  system.txt
scripts/: migrate_firestore_namespace.py  migrate_s3_to_firestore.py  verify_grounding.py
storage/: system.txt
tests/: conftest.py  test_app_additional.py  test_config.py
tests/test_ai/: __init__.py  test_client.py  test_conversation.py  test_conversation_additional.py  test_conversation_extensive.py  test_conversation_genai.py  test_router.py
tests/test_bot/: __init__.py  test_channel_commands.py  test_commands.py  test_commands_extensive.py  test_discord_bot.py  test_discord_bot_additional.py  test_discord_bot_extensive.py  test_events.py  test_events_extensive.py  test_reactions.py
tests/test_memory/: test_channel_context.py  test_fact_store.py  test_judge.py  test_llm_judge.py  test_memory_additional.py  test_reflection.py  test_short_term.py  test_summarizer.py  test_user_profile.py
tests/test_utils/: __init__.py  test_channel_config.py  test_logger.py  (+6 more)
utils/: aws_clients.py  channel_config.py  file_utils.py  firestore_client.py  s3_utils.py  text_utils.py
xivapi/: SPEC.md  client.py
(+16 files in other folders)
